# waffle

./: .clang-format  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
cmake/: generate_wayland_protocols.cmake
src/waffle/: logger.cc  logger.h  main.cc  waffle_property.h  wayland_server.cc  wayland_server.h
src/waffle/backend/: backend.cc  backend.h
src/waffle/backend/surface/: context_egl.cc  context_egl.h  egl_utils.cc  egl_utils.h  environment_egl.h  linux_egl_surface.cc  linux_egl_surface.h  surface_base.cc  surface_base.h  surface_gl.cc  surface_gl.h  surface_gl_delegate.h
src/waffle/backend/window/: cursor_data.h  native_window.h  native_window_drm.cc  native_window_drm.h  native_window_drm_gbm.cc  native_window_drm_gbm.h  native_window_x11.cc  native_window_x11.h  waffle_window.h  waffle_window_drm.h  waffle_window_x11.cc  waffle_window_x11.h  window_binding_handler.h  window_binding_handler_delegate.h
src/waffle/compositor/: compositor.cc  compositor.h
src/waffle/renderer/: texture.cc  texture.h  texture_context.cc  texture_context.h  window_renderer.cc  window_renderer.h
src/waffle/renderer/shader/: shader.cc  shader.h  shader_context.cc  shader_context.h  shader_program.cc  shader_program.h
src/waffle/utils/: vec2.h
src/waffle/wayland/: wayland_array.h  wayland_binding_handler.h  wayland_binding_handler_delegate.h  wayland_data_device_manager.cc  wayland_data_device_manager.h  wayland_region.cc  wayland_region.h  wayland_resource.cc  wayland_resource.h  wayland_seat.cc  wayland_seat.h  wayland_shell_surface.cc  wayland_shell_surface.h  wayland_surface.cc  wayland_surface.h  xdg_shell_surface.cc  xdg_shell_surface.h
